Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32872

Devices cannot be removed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • Qt Creator 16.0.1
    • None
    • 6b527eced (17.0)

    Description

      If a device is added through sdktool and later removed, it still stays in QtCreator settings forever.

      steps to reproduce:

      1. Tools/sdktool/libexec/qtcreator/sdktool addDev --id "LinuxDevice" --name "Remote Linux Device" --type 0 --host "10.10.10.10" --origin 1 --osType "GenericLinuxOsType" 
      1. Open and close QtCreator
      2. Tools/sdktool/libexec/qtcreator/sdktool rmDev --id "LinuxDevice" 
      1. Open QtCreator

      If the device's origin is set to 1 (auto detected), the device cannot even be manually removed from the UI.

       

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-32872
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes