ProjectExplorer: Sync the saved device list with the SDK-provided one

That is, remember if a device came from the SDK originally and remove
such devices if they no longer appear in the SDK device list.

Fixes: QTCREATORBUG-32872
Change-Id: Ia3e2280871645f3e5233bf1770a593ed204c7082
Reviewed-by: Eike Ziller <eike.ziller@qt.io>